criação da interface para o browser

--- a/Eq2Grau/Eq2Grau/Views/Home/Index.cshtml
+++ b/Eq2Grau/Eq2Grau/Views/Home/Index.cshtml
@@ -3,6 +3,17 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Soluções de uma Equação do 2º Grau</h1>
 </div>
+
+<!-- recolher os dados dos parâmetros da esquação-->
+<form>
+    <div>
+        <p>escreve os parâmetros da esquação:</p>
+        A= <input type="text" /> <br />
+        B= <input type="text" /> <br />
+        C= <input type="text" /> <br />
+
+        <input type="submit" value="Calcular"/>
+    </div>
+</form>
